Remove i2pd fix. Use upstream startup options.
i2pd now supports dual keys.

Upstream defines some startup options[1].

Also on this commit: update depends and desktop file.

References
----------
[1] https://github.com/zlatinb/muwire/blob/muwire-0.7.2/gui/build.gradle#L54-L60